# Disaster_Management

./: .env  README.md
backend/: Cargo.toml  log.txt
backend/src/: main.rs
backend/src/disaster/: disaster_model.rs  disaster_service.rs  disaster_structure.rs  mod.rs
backend/src/middleware/: admin.rs  auth.rs  community.rs  local.rs  log.rs  mod.rs  ngo.rs  rotate_token.rs
backend/src/resources/: mod.rs  resources_model.rs  resources_service.rs  resources_structure.rs
backend/src/routes/: mod.rs
backend/src/shelters/: mod.rs  shelters_model.rs  shelters_service.rs  shelters_structure.rs
backend/src/user/: mod.rs  user_model.rs  user_service.rs  user_structure.rs
backend/src/utils/: db.rs  disaster_event_data.rs  mod.rs  response.rs
