[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
mongodb = "3.2.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.31"
validator = { version = "0.20.0", features = ["derive"] } 
lazy_static = "1.5.0" 
dotenv = "0.15.0"
cargo-watch = "8.5.3"
jsonwebtoken = "9.3.1"
chrono = "0.4.39"
argon2 = "0.5.3"
tower-cookies = "0.11.0"
hyper = "1.6.0"
reqwest = { version = "0.12.12", features = ["json"] }
http = "1.2.0"

